# kunkun-agent

./: .env.example  .gitignore  LICENSE  README.md  agent.py  persist.py  server.py
app/: README.md  index.html  package-lock.json  package.json  vite.config.js
app/scripts/: test-ip-preference.mjs  test-lumo-layout.mjs  test-tool-copy.mjs
app/src/: App.jsx  main.jsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs  window.rs
app/src/components/: AssistantPanel.jsx  ChatLive.jsx  DeskPet.jsx  DesktopShell.jsx  MenuBarIcon.jsx  Porthole.jsx
app/src/data/: copy.js
app/src/lib/: backend.js  bus.js  ipPreference.js  toolCopy.js
app/src/pages/: Gallery.jsx
app/src/theme/: app.css  tokens.css
app/src/utils/: pet.js
app/src/windows/: PanelWindow.jsx  PetWindow.jsx
docs/: DESIGN.md  PukyPuky参考方向-ClaudeCode设计方案.md  Rocky-石虎IP形象产出.md  macOS-App-方案与架构.md  安全审计报告-分发前.md  方案B-真实翼蜥Lumo-演示方案.md  真实翼蜥桌面小宠物方案.md
docs/superpowers/plans/: 2026-07-05-lumo-ip-switch.md
docs/superpowers/specs/: 2026-07-04-sse-queue-persistence-design.md  2026-07-05-lumo-ip-switch-design.md
skills/code-review/: SKILL.md
tests/: test_regressions.py
